--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ backcall==0.2.0
 decorator==5.1.1
 dj-database-url==1.0.0
 Django==4.1
+django-cors-headers==3.13.0
 django-cpf==0.1.0
 djangorestframework==3.13.1
 drf-spectacular==0.23.1
